# django_react_template

./: .gitignore  .markdownlint.json  CLAUDE.md  README.md  TODO.md  docker-compose.yml  justfile
.github/: copilot-instructions.md
.github/agents/: docs.agent.md
backend/: .env  .env.example  Dockerfile  conftest.py  pyproject.toml
backend/Docker_files/: Dockerfile  docker-compose.yml
backend/apps/accounts/: models.py  serializers.py  services.py  tests.py
backend/apps/pages/: tasks.py  tests.py
backend/core/settings/: base.py  dev.py  test.py
backend/django_react_template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: monorepo-implementation-plan.md
docs/explanations/: architecture.md  auth-flow.md
docs/guides/: local-setup.md  onboarding.md
docs/plans/: accounts-email-as-username.md  monorepo-implementation-plan.md
docs/standards/: api-contracts.md
frontend/: .env.example  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/__tests__/routes/: login.test.tsx  signup.test.tsx
frontend/src/api/: auth.test.ts  client.ts  queryKeys.ts
frontend/src/components/charts/: PlotlyChart.tsx
frontend/src/components/home/: HeroBanner.tsx
frontend/src/components/layout/: Navbar.test.tsx
frontend/src/components/ui/: form.tsx
frontend/src/hooks/: useAuth.test.tsx  useTaskPoller.test.ts
frontend/src/lib/: theme.ts
frontend/src/routes/: demo.chart.tsx  index.tsx  login.tsx  signup.tsx
frontend/src/store/: ui.ts
frontend/src/types/: auth.ts  plotly-dist-min.d.ts
