[project]
name = "template"
version = "0.1.0"
requires-python = "==3.13.*"
dependencies = [
  "django ~=5.1",
  "djangorestframework ~=3.15",
  "djangorestframework-simplejwt ~=5.3",
  "django-cors-headers ~=4.4",
  "django-environ ~=0.11",
  "gunicorn ~=23.0",
  "psycopg[binary] ~=3.2",
]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
  "pytest-django>=4.12.0",
  "typing_extensions ~=4.12",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings.test"
python_files = ["test_*.py", "tests.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["apps"]
addopts = "-v"
